--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="mainContainer">
     <div class="container">
         <div class="logo">
-            <img src="/images/logo.png" alt="">
+            <img src="images/logo.png" alt="">
         </div>
         <div class="navbar">
             <ul class="navlist">
@@ -28,7 +28,7 @@
 </div>
 <section class="hero">
     <div class="left heroSplit">
-        <img src="/images/coffee split.png" alt="">
+        <img src="images/coffee split.png" alt="">
     </div>
     <div class="middle">
         <div class="circul"></div>
